# etf-investing

./: .universe_cache.json  Dockerfile  README.md  backfill_intraday.py  backfill_intraday_date.py  config.json  config.local.example.json  docker-compose.yml  docker-deploy.sh  etf_config.py  etf_daily.py  etf_data.py  etf_pool.py  etf_server.py  etf_strategy.py  etf_universe.py  etf_web.py  holdings.json  market_data_service.py  pyproject.toml  requirements.txt  restart.sh  venv-deploy.sh  watchlist.json
src/etf_investing/: __init__.py  config.py  daily.py  data.py  headers.txt  market_data.py  market_data_service.py  notifications.py  server.py  strategy.py  universe.py  user_agents.txt  web_app.py
src/etf_investing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_frontend_custom_tab.py  test_fund_metrics.py  test_intraday_backtest.py  test_market_data_store.py  test_notifications.py  test_signals_backtest.py  test_strategy_models.py  test_universe_filter.py  test_web_grouping.py
web/: index.html
web/static/: app.css  app.js
