[project]
name = "etf-investing"
version = "0.1.0"
description = "ETF selection dashboard and quote utilities"
requires-python = ">=3.10"
dependencies = [
  "flask",
  "flask-cors",
  "mootdx",
  "requests",
  "pandas",
  "numpy",
  "futu-api",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
